CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

SET(CMAKE_CXX_FLAGS "-std=c++14")

FIND_PACKAGE(Torch REQUIRED)

FIND_LIBRARY(PYLON_LIBRARY pylon REQUIRED)
FIND_PATH(PYLON_INCLUDE_DIR Pylon/PylonIncludes.h) 
SET(GENICAM_INCLUDE_DIR "${PYLON_INCLUDE_DIR}/Headers/GenICam")

INCLUDE_DIRECTORIES("${Torch_INSTALL_INCLUDE}/TH" ${GENICAM_INCLUDE_DIR} ${PYLON_INCLUDE_DIR} "include/")

LINK_DIRECTORIES("${Torch_INSTALL_LIB}")

SET(src tpylon.cpp ${PROTO_SRCS})

FILE(GLOB luasrc *.lua)

ADD_LIBRARY(tpylon MODULE ${src})
TARGET_LINK_LIBRARIES(tpylon TH luaT luajit ${PYLON_LIBRARY})

### Torch packages supposes libraries prefix is "lib"
SET_TARGET_PROPERTIES(tpylon PROPERTIES PREFIX "lib" IMPORT_PREFIX "lib")
    
INSTALL(TARGETS tpylon
  RUNTIME DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}"
  LIBRARY DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}")

INSTALL(
  FILES
  ${luasrc}
  DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/tpylon")
